--- a/src/common/scss/apa.scss
+++ b/src/common/scss/apa.scss
@@ -1,64 +1,15 @@
 @charset 'utf-8';
 
+@import "./reset/_reset.scss";
 
-@import "base/reset";
-
-
-
-/*文字サイズの指定*/
-.test3{
-    text-align: center;
-}
+@import "./base/**/*.scss";
 
 html{
     font-size: 62.5%;
 }
-
 body{
-    font-family: -apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size:1.6rem;/* 16px*/
+	font-size:1.6rem;/* 16px*/
     line-height: 2;
-}
-
-h1 {
-    font-size: 36px;/* IE8以下とAndroid4.3以下用フォールバック */
-    font-size: calc(2.4rem + ((1vw - 0.64rem) * 2.1429));/* 24px~36pxで可変*/
-    line-height: 1.3;
-}
-h2 {
-    font-size: 24px;/* IE8以下とAndroid4.3以下用フォールバック */
-    font-size: calc(2rem + ((1vw - 0.64rem) * 0.7143));/* 20px~24pxで可変*/
-    line-height: 1.3;
-}
-h3 {
-    font-size: 22px;/* IE8以下とAndroid4.3以下用フォールバック */
-    font-size: calc(1.8rem + ((1vw - 0.64rem) * 0.7143));/* 18px~22pxで可変*/
-    line-height: 1.3;
-}
-@media (min-width: 1200px) {/* 1200px以上*/
-    h1 {
-        font-size: 3.6rem;/* 36px*/
-    }
-    h2 {
-        font-size: 2.4rem;/* 24px*/
-    }
-    h3 {
-        font-size: 2.2rem;/* 22px*/
-    }
-}
-@media screen and (max-width: 640px) {/* 640px以下*/
-    body{
-    line-height: 2;
-    }
-    h1{
-        font-size: 2.4rem;/* 24px*/
-    }
-    h2 {
-        font-size: 2rem;/* 20px*/
-    }
-    h3 {
-        font-size: 1.8rem;/* 18px*/
-    }
 }
 
 
@@ -68,7 +19,6 @@ body.top-page{
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(images/background-photo.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -123,54 +73,6 @@ body.top-page::before{
     width:100%;
 }
 
-
-
-/*archiveページ*/
-body.archives {
-    display: grid;
-    grid-template-columns: 1fr 750px 50px 300px 1fr;
-    grid-template-rows: auto 40px auto 40px auto;
-    background-color: #e7e5d8;
-    color:#000;
-    margin: 0;
-  }
-  body.archives > .header{
-    position:-webkit-sticky;
-          position: sticky;
-          top: 0;
-          z-index: 15;
-    grid-column-start: 1;
-    grid-column-end:  -1;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    background-color: #E70012;
-    text-align: center;
-
-  }
-  body.archives > .main{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-  body.archives > .side{
-    grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-  body.archives > .footer{
-    grid-column-start: 1;
-    grid-column-end:  -1;
-    grid-row-start: -2;
-    grid-row-end: -1;
-    background-color: #E70012;
-  }
-
-
-
-
-
 /*Button*/
 .button {
     padding: .5em 4em;
@@ -185,4 +87,3 @@ body.archives {
     background-color: rgba(255,255,255,.3);
     border-radius: 30px;
   }
-
