--- a/src/common/scss/base/_structure.scss
+++ b/src/common/scss/base/_structure.scss
@@ -1,2 +1,43 @@
 @charset 'utf-8';
+/*archiveページ*/
+body.archives {
+    display: grid;
+    grid-template-columns: 1fr 750px 50px 300px 1fr;
+    grid-template-rows: auto 40px auto 40px auto;
+    background-color: #e7e5d8;
+    color:#000;
+    margin: 0;
+	
+	> .header{
+    position:-webkit-sticky;
+          position: sticky;
+          top: 0;
+          z-index: 15;
+    grid-column-start: 1;
+    grid-column-end:  -1;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: #E70012;
+    text-align: center;
 
+  }
+  > .main{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+  > .side{
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+  > .footer{
+    grid-column-start: 1;
+    grid-column-end:  -1;
+    grid-row-start: -2;
+    grid-row-end: -1;
+    background-color: #E70012;
+  }
+}
