--- a/src/common/scss/apa.scss
+++ b/src/common/scss/apa.scss
@@ -1,8 +1,10 @@
 @charset 'utf-8';
-
+@import "./base/_mixin.scss";
 @import "./reset/_reset.scss";
+@import "./base/_base.scss";
 
-@import "./base/**/*.scss";
+@import "./base/_structure.scss";
+@import "./base/_font.scss";
 
 html{
     font-size: 62.5%;
@@ -13,36 +15,6 @@ body{
 }
 
 
-
-/*Top*/
-body.top-page{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-body.top-page::before{
-    /* 透過した黒を上から重ねるイメージ */
-    background-color: rgba(0,0,0,0.4);
-    /* 自由に位置指定 */
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: ' ';
-  }
-.top-page__inner{
-    width: 100%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translateY(-50%) translateX(-50%);
-    transform: translateY(-50%) translateX(-50%);
-}
 .top-siteName{
     color: #fff;
     text-align: center;
