--- a/root/_common/css/apa.css
+++ b/root/_common/css/apa.css
@@ -113,10 +113,15 @@ body {
     @media (max-width: 767px) {
       .st-grid.-archives {
         grid-template-columns: 20px 1fr 20px;
-        grid-template-rows: auto 40px auto 40px auto 40px auto; } }
+        grid-template-rows: auto 40px auto 40px auto 40px auto;
+      }
+      pre{display: none;}
+    }
+        
     @media (max-width: 500px) {
-      .st-grid.-archives {
-        grid-template-columns: 20px 1fr 20px; } }
+      .st-grid.-archives {grid-template-columns: 20px 1fr 20px; } 
+      pre{display: none;}
+    }
     .st-grid.-archives > .header {
       position: -webkit-sticky;
       position: sticky;
@@ -244,3 +249,41 @@ body {
 .button:hover {
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 30px; }
+
+  iframe {
+    border: none;
+    width: 100%;
+  }
+  iframe#header{
+    vertical-align: bottom;
+    height: 2.5em;
+    width: 100%;
+  }
+  .site{
+    text-align: center;
+    margin: 0 auto;
+  }
+
+
+  /*モーダル*/
+  #mdOverlay{
+    top:0;
+    left:0;
+    width: 100%;
+    position: fixed;
+    z-index: 97;
+    background: #000;
+    display: none;
+  }
+  #mdWindow{
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    top:50%;
+    left: 50%;
+    width: 80%;
+    height: auto;
+    position: fixed;
+    z-index: 98;
+    background: #fff;
+    display: none;
+  }
