--- a/root/_common/css/parts.css
+++ b/root/_common/css/parts.css
@@ -70,6 +70,72 @@ p{
   letter-spacing: 0.05em;
 }
 
+/*注意ボックス*/
+.cautionBox {
+  position: relative;
+  margin: 2em 0;
+  padding: 0.5em 1em;
+  border: solid 3px #900;
+  background: #fff;
+}
+.cautionBox .box-title {
+  position: absolute;
+  display: inline-block;
+  top: -27px;
+  left: -3px;
+  padding: 0 9px;
+  height: 25px;
+  line-height: 25px;
+  font-size: 17px;
+  background: #900;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px 5px 0 0;
+}
+.cautionBox p {
+  margin: 0; 
+  padding: 0;
+}
+
+/*ポイントボックス*/
+.pointBox {
+  position: relative;
+  margin: 2em 0;
+  padding: 0.5em 1em;
+  border: solid 3px #80c8d1;
+  background: #fff;
+}
+.pointBox .box-title {
+  position: absolute;
+  display: inline-block;
+  top: -27px;
+  left: -3px;
+  padding: 0 9px;
+  height: 25px;
+  line-height: 25px;
+  font-size: 17px;
+  background: #80c8d1;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px 5px 0 0;
+}
+.pointBox p {
+  margin: 0; 
+  padding: 0;
+}
+
+/*ボーダータイトル*/
+.headline.-borderTitle{
+  background: #00CC33;
+  vertical-align: middle;
+  padding:10px;
+  line-height: 1.2;
+  color:#fff;
+}
+.headline.-borderTitle > .material-icons{
+padding: 0 5px;
+color: #fff;
+}
 
 /*ページタイトル*/
 .page__title{
