--- a/root/_common/css/apa.css
+++ b/root/_common/css/apa.css
@@ -6,7 +6,7 @@
 
 img,
 video {
-  width: 100%;
+  max-width: 100%;
   height: auto; }
 
 /* 
@@ -286,4 +286,8 @@ body {
     z-index: 98;
     background: #fff;
     display: none;
+  }
+  .modalImage{
+    max-width: none;
+    width: 100%;
   }
