Update　画像カラム

--- a/root/_common/css/apa.css
+++ b/root/_common/css/apa.css
@@ -208,6 +208,10 @@ body {
   font-size: 1.6rem;
   /* 16px*/
   line-height: 2; }
+  
+video{
+  width: 100%;
+}
 
 .top-siteName {
   color: #fff;
